--- a/weirdgets/pubspec.yaml
+++ b/weirdgets/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 
 dependencies:
   camera: ^0.9.4+16
+  audioplayers: ^0.20.1
   flutter:
     sdk: flutter
 
@@ -16,6 +17,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
