--- a/weirdgets/pubspec.yaml
+++ b/weirdgets/pubspec.yaml
@@ -1,6 +1,6 @@
 name: weirdgets
-description: A wierd Flutter widgets package mad by XPEHO mobile.
-version: 0.0.2
+description: A weird Flutter widgets package made by XPEHO mobile for the best and also the worst.
+version: 0.0.3
 homepage: https://weirdgets-36c4b.web.app/#/
 repository: https://github.com/XPEHO/weirdgets
 
